fixed bubble sizing/spacing

--- a/next-app/app/fidgetPopper/select-popper/popperSelect.css
+++ b/next-app/app/fidgetPopper/select-popper/popperSelect.css
@@ -73,7 +73,7 @@
 }
 
 #select-popper {
-    padding: 1.5em 4em;
+    padding: 1em 4em;
     text-transform: uppercase;
     font-weight: bold;
     font-family: var(--font-press-start-2p);
